--- a/projectCode/sellerLogin.html
+++ b/projectCode/sellerLogin.html
@@ -1,70 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seller Login</title>
-    <link rel="stylesheet" href="login.css"> <!-- shared login/signup styles -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Seller Login</title>
+  <link rel="stylesheet" href="login.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <!-- top header with logo -->
-    <div class="header">
-        <div class="header-left"><a href="index.php"><img src="iBay-logo.png" alt="iBay logo"></a></div>
-        <div class="header-center">iBay Login</div>
-        <div class="header-right"></div>
+  <div class="header">
+    <div class="header-left">
+      <a href="index.php"><img src="iBay-logo.png" alt="iBay logo"></a>
     </div>
+    <div class="header-center">iBay Login</div>
+    <div class="header-right"></div>
+  </div>
 
-    <!-- login form -->
-    <div class="login-container">
-        <h2>Login to Your Account</h2>
-        <div id="error-message" class="error-message"></div>
+  <div class="login-container">
+    <h2>Login to Your Account</h2>
+    <div id="error-message" class="error-message" style="display:none;"></div>
 
-        <form method="POST" action="login.php">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
+    <form id="loginForm">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
 
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" required>
 
-            <button type="submit">Login</button>
-        </form>
-    </div>
+      <button type="submit">Login</button>
+    </form>
+  </div>
 
-    <!-- alt option -->
-    <p><a href="sellerSignUp.html">Sign up</a> instead</p>
+  <p><a href="sellerSignUp.html">Sign up</a> instead</p>
 
-    <!-- footer -->
-    <div class="footer">
-        Copyright @2025-25 iBay Inc. All rights reserved
-    </div>
+  <div class="footer">
+    © 2025 iBay Inc. All rights reserved
+  </div>
 
-    <!-- JS handles query error feedback -->
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        const error = params.get("error");
-        const errorDiv = document.getElementById("error-message");
+  <script>
+    $(function(){
+      // Intercept form submission
+      $('#loginForm').on('submit', function(e){
+        e.preventDefault();
+        $('#error-message').hide();
+        // Grab and trim input values
+        const email    = $('#email').val().trim();
+        const password = $('#password').val().trim();
+        let msg = '';
 
-        if (error) {
-            let message = "";
-            switch (error) {
-                case "empty":
-                    message = "Please enter both email and password.";
-                    break;
-                case "invalid":
-                    message = "Incorrect password. Please try again.";
-                    break;
-                case "notfound":
-                    message = "Email not registered.";
-                    break;
-                case "invalidemail":
-                    message = "Please enter a valid email address.";
-                    break;
-                case "server":
-                    message = "Server error. Please try again later.";
-                    break;
-            }
-            errorDiv.textContent = message;
+        if (!email || !password) {// Both fields required
+          msg = 'Please enter both email and password.';
+        } else if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
+          msg = 'Please enter a valid email address.';// Simple email format check
         }
-    </script>
+        if (msg) {
+          $('#error-message').text(msg).show();
+          return;// Display validation error and stop
+        }
+
+        $.ajax({
+          url: 'login.php',
+          type: 'POST',
+          contentType: 'application/json; charset=UTF-8',
+          dataType: 'json',
+          data: JSON.stringify({ email, password })// Send credentials as JSON
+        })
+        .done(function(resp){
+          if (resp.success) {
+            window.location.href = 'buyerPage.php';// On success, redirect to buyerPage
+          } else {
+            $('#error-message').text(resp.error).show();
+          }
+        })
+        .fail(function(jqXHR){
+          // AJAX call failed: try to parse JSON error or show generic
+          let text = 'Server error. Please check your credentials.';
+          try {
+            const json = JSON.parse(jqXHR.responseText);
+            if (json.error) text = json.error;
+          } catch(_){}
+          $('#error-message').text(text).show();
+        });
+      });
+    });
+  </script>
 </body>
 </html>
