--- a/projectCode/sellerLogin.html
+++ b/projectCode/sellerLogin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seller Login</title>
+  <title>Login to iBay</title>
   <link rel="stylesheet" href="login.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
